# rlog

./: .eslintrc.json  .gitignore  .npmrc  CHANGELOG.md  DEV.md  LICENSE  README.md  SCHEMA.md  package-lock.json  package.json  pnpm-workspace.yaml  raycast-env.d.ts  todo.txt
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  run.sh
api/middleware/: auth.py
api/models/: reading.py  user.py
api/routers/: auth.py  health.py  mobile_oauth_callback.py  reading.py
api/services/: github.py  metadata.py
api/utils/: logging_config.py
docs/: creating-a-custom-reading-list.mdx
raycast/: .gitignore  CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
raycast/src/: capture.tsx  components.tsx  log-read.tsx  log-window.tsx  open-random-article.tsx  read-later.tsx  read-window-later.tsx  setup-blog.tsx  setup-rlog.tsx  sync.tsx  view-read-log.tsx  view-reading-list.tsx
raycast/src/utils/: index.ts  metadata.ts  sync.ts  utils.ts
shared/: package.json
shared/src/: browser.ts  firefox.ts  index.ts  utils.ts
src/: add-reading.tsx  log-read.tsx  log-window.tsx  read-later.tsx  read-window-later.tsx  setup-blog.tsx
src/utils/: browser.ts  metadata.ts
tests/: jest.config.js  metadata.test.ts
