[project]
name = "rlog-api"
version = "0.1.0"
description = "rlog backend API - reading log service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "aiohttp>=3.10.0",
    "aioboto3>=13.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
]
